ES6/Loops/Iteration in A1 && mdifiaction in A2

--- a/A2/src/components/style.css
+++ b/A2/src/components/style.css
@@ -38,7 +38,7 @@
   }
   
   .hamburger-menu {
-    padding-right: 10px; /* Add some padding to the hamburger menu */
+    padding-right: 10px;
   }
   .right{
     margin-right: 1rem;
